--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "multicompose",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "compose multiple instances of the same enhance function",
   "main": "dist/multicompose.js",
   "scripts": {
     "build": "webpack",
+    "prettier": "prettier --single-quote --write \"src/**/*.{js,jsx,json,css}\" ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "prettier": "^1.12.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   }
