--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "multicompose",
+  "name": "multi-compose",
   "version": "0.1.4",
   "description": "compose multiple instances of the same enhance function",
-  "main": "dist/multicompose.js",
+  "main": "dist/multi-compose.js",
   "scripts": {
     "build": "webpack",
     "prettier": "prettier --single-quote --write \"src/**/*.{js,jsx,json,css}\" ./webpack.config.js",
