--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multi-compose",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "compose multiple instances of the same enhance function",
   "main": "dist/multi-compose.js",
   "scripts": {
@@ -30,5 +30,6 @@
     "prettier": "^1.12.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
-  }
+  },
+  "files": ["dist/multi-compose.js"]
 }
