--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-preset-react": "^6.24.1",
     "prettier": "^1.12.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-node-externals": "^1.7.2"
   },
   "files": [
     "dist/multi-compose.js"
