--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "prettier": "prettier --single-quote --write \"src/**/*.{js,jsx,json,css}\" ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,24 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.0.1",
     "prettier": "^1.12.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-node-externals": "^1.7.2"
   },
   "files": [
     "dist/multi-compose.js"
-  ]
+  ],
+  "jest": {
+    "setupTestFrameworkScriptFile": "./src/setupTests.js",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
